2006-05-08  Simon Budig  <simon@gimp.org>

	* plug-ins/common/postscript.c: fix typo...

2006-05-08  Michael Natterer  <mitch@gimp.org>

	* app/plug-in/plug-in-enums.[ch]: changed enum PlugInImageType
	to GimpPlugInImageType.

	* app/pdb/gimppluginprocedure.[ch]: changed accordingly.

2006-05-08  Simon Budig  <simon@gimp.org>

	* plug-ins/common/postscript.c: improve the error message when
	spawning ghostscript does not work. See bug #340996. Untabbified.

2006-05-08  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpdrawable.c: don't #include "gimp.h".

2006-05-07  Simon Budig  <simon@gimp.org>

	* modules/colorsel_triangle.c: Make the hue angle behave
	mathematically correct. Fixes bug #141922

	* plug-ins/script-fu/scripts/circuit.scm: Fix multi line description.

	* docs/Wilber.svg: Add xmlns attribute to the svg element, so
	firefox renders it when reading it from disk.

2006-05-07  Michael Natterer  <mitch@gimp.org>

	* app/display/gimpdisplayshell-scale.c (gimp_display_shell_scale):
	return early if the shell is already at the requested zoom level.
	(paranoia addition for bug #165032, which was already fixed by the
	fix for bug #164281)

2006-05-07  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpbrusheditor.c: hide the button bar, which is
	useless for the brush editor. Fixes user confusion (bug #306704).

2006-05-06  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimppainttool.c: connect to the context's
	"brush-changed" signal and update the brush core's brush
	accordingly. Fixes inconsistent brush preview when not moving
	the mouse while the brush changes (bug #323404).

2006-05-06  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpparamspecs.[ch]: added "gboolean none_ok" members
	to GimpParamSpecImageID, GimpParamSpecItemID and
	GimpParamSpecDisplayID.  If none_ok is set, allow '0' and '-1' as
	valid IDs. Added "none_ok" parameter to all ID param spec
	constructors.

	* app/xcf/xcf.c: require real image IDs, but allow images without