@@ -84,11 +84,6 @@ file_save_dialog_new (Gimp *gimp)
                                  GTK_STOCK_SAVE,
                                  GIMP_HELP_FILE_SAVE);
 
-  gtk_dialog_set_alternative_button_order (GTK_DIALOG (dialog),
-                                           GTK_RESPONSE_OK,
-                                           GTK_RESPONSE_CANCEL,
-                                           -1);
-
   uri = g_object_get_data (G_OBJECT (gimp), "gimp-file-save-last-uri");
 
   if (uri)
